--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "cdk-serverless-v2-demo",
+  "name": "cdk-serverless-v2-demo-with-zod",
   "scripts": {
     "build": "npx projen build",
     "bundle": "npx projen bundle",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
+    "definitionsCreation": "npx projen definitionsCreation",
     "deploy": "npx projen deploy",
     "destroy": "npx projen destroy",
     "diff": "npx projen diff",
@@ -25,41 +26,43 @@
     "projen": "npx projen"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.109",
-    "@types/jest": "^29.2.5",
-    "@types/js-yaml": "*",
+    "@types/aws-lambda": "^8.10.119",
+    "@types/jest": "^29.5.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/lambda-log": "^2.2.1",
     "@types/node": "^16",
-    "@types/uuid": "^9.0.0",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.60.0",
-    "esbuild": "^0.16.16",
+    "aws-cdk": "^2.92.0",
+    "esbuild": "^0.19.2",
     "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^29.3.1",
+    "eslint-import-resolver-node": "^0.3.9",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.0",
+    "jest": "^29.6.2",
     "jest-junit": "^15",
     "npm-check-updates": "^16",
-    "projen": "^0.66.9",
-    "ts-jest": "^29.0.3",
+    "projen": "^0.72.15",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.272.0",
-    "@aws-sdk/lib-dynamodb": "^3.272.0",
-    "aws-cdk-lib": "^2.60.0",
-    "cdk-serverless": "^2.0.1",
+    "@asteasolutions/zod-to-openapi": "^5.5.0",
+    "@aws-sdk/client-dynamodb": "^3.391.0",
+    "@aws-sdk/lib-dynamodb": "^3.391.0",
+    "aws-cdk-lib": "^2.92.0",
+    "cdk-serverless": "^2.5.0",
     "constructs": "^10.0.5",
-    "date-fns": "^2.29.3",
-    "dynamodb-onetable": "2.5.1",
-    "esbuild": "^0.16.16",
+    "date-fns": "^2.30.0",
+    "dynamodb-onetable": "2.6.3",
+    "esbuild": "^0.19.2",
     "js-yaml": "^4.1.0",
-    "openapi-typescript": "^6.1.0",
-    "projen": "^0.66.9",
-    "uuid": "^9.0.0"
+    "openapi-typescript": "^6.5.0",
+    "projen": "^0.72.15",
+    "uuid": "^9.0.0",
+    "zod": "^3.22.1"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
